# Linear-Algebra-Tutorial

./: 01-vector.ipynb  02-matrices.ipynb  03-systems-of-linear-equations.ipynb  04-vector-spaces-and-orthogonality.ipynb  05-eigenvalues-and-eigenvectors.ipynb  06-matrix-decompositions.ipynb  07-applications-in-ml-and-ai.ipynb  README.md  cheatsheet.md  generate_covers.py  pyproject.toml
