[project]
name = "linear-algebra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "plotly>=5.18",
  "seaborn>=0.13",
  "pandas>=2.0",
  "pillow>=10.0",
  "ipykernel>=6.29",
  "nbformat>=5.9",
]
